++++++++++++++++++++++++++++++++++++
++                                ++
++    getRelated 0.9.2-dev        ++
++         Released: 10/10/2011   ++
++                                ++
++++++++++++++++++++++++++++++++++++

Fix bug on some configurations with the callback function being inline.
Add anchor tags to the default chunk.
Disable debug mode being enabled by default.

++++++++++++++++++++++++++++++++++++
++                                ++
++    getRelated 0.9.1-dev        ++
++         Released: 9/10/2011   ++
++                                ++
++++++++++++++++++++++++++++++++++++

Add context & parent support.
Internationalization and property descriptions.
Add properties to decide on the sample size to increase accuracy / decrease loading times.