@@ -359,23 +359,24 @@ class getRelated {
         /* Sort on rank (hi>lo) and if equal on ID (hi>lo) */
         uasort(
             $tmpArray,
-            'mysort'
+            array($this, 'mysort')
         );
 
         $this->related = $tmpArray;
         return true;
     }
+
+    /**
+     * Simple custom sort function to sort on rank first, and when equal on ID (assuming the highest ID is the most recent resource).
+     * @param $a
+     * @param $b
+     * @return int
+     */
+    function mysort ($a, $b) {
+        if ($a['rank'] == $b['rank'])
+            return $a['id'] < $b['id'] ? 1 : -1;
+        return $a['rank'] < $b['rank'] ? 1 : -1;
+    }
 }
 
-/**
- * Simple custom sort function to sort on rank first, and when equal on ID (assuming the highest ID is the most recent resource).
- * @param $a
- * @param $b
- * @return int
- */
-function mysort ($a, $b) {
-    if ($a['rank'] == $b['rank'])
-        return $a['id'] < $b['id'] ? 1 : -1;
-    return $a['rank'] < $b['rank'] ? 1 : -1;
-}
 ?>
