@@ -1,3 +1,5 @@
+Add custom sort function to class for cleanliness
+
 ++++++++++++++++++++++++++++++++++++
 ++                                ++
 ++    getRelated 0.9.2-dev        ++
